updates to next hour advancements

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 <body onload="construct_table()">
 
-    <button class="rounded-button" onclick="advance_hour()">advance hour</button>
+  <button class="rounded-button" onclick="calculate_advance_hour_and_store_in_div_data()">Calculate Next Hour and Upload to Firebase</button>
+  <button class="rounded-button" onclick="calculate_advance_hour_and_store_in_div_data()">Reassign who up row based on Next Hour</button>
     <!-- <button class="button-10" onclick="clear_all_cells()">clear all</button> -->
     <input type="text" class="assign_pt_input">
     <button id="assign_pt_button" class="rounded-button">Assign patient</button>
