added api to update who-up-row w next up doc

--- a/public/doctor_view.html
+++ b/public/doctor_view.html
@@ -10,7 +10,7 @@
 <body onload="construct_table()">
 
     <button id="myButton">Refresh</button>
-    <span id="clock"></span>
+    <span id="clock" class="clock_formatting"></span>
 
   <table id="myTable">
     <thead>
@@ -21,7 +21,7 @@
       <script src="doctor_view/construct_table.js"></script>
       <script src="clock.js"></script>
       <script src="highlight_row.js"></script>
-      <script type="module" src="doctor_view/import_from_firebase.js"></script>
+      <!-- <script type="module" src="doctor_view/import_from_firebase.js"></script> -->
       <script type="module" src="doctor_view/import_from_firebase_realtime.js"></script>
       <script src="doctor_view/write_data_to_table_doctor_view.js"></script>
       <script src="doctor_view/highlight_next_up_doctor.js"></script>
