--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <!-- <button class="button-10" id="export_button">Export to JSON</button>
     <button class="button-10" id="import_button">Import from CSV</button> -->
     <button id="upload_to_firebase_button" class="rounded-button">Update Content</button>  <!-- style="display: none;"  hidden button that updates firebase-->
-    <span id="clock"></span>
+    <span id="clock" class="clock_formatting"></span>
 
   <table id="myTable">
     <thead>
